# ImplicitStefanProblemMPI

./: CMakeLists.txt  README.md  main.cpp  ui.cpp  ui.h
base/: CMakeLists.txt  print.h  timer.cpp  timer.h  utils.h
basic_parabolic/: CMakeLists.txt  basic_parabolic.cpp  basic_parabolic.h
mesh/: CMakeLists.txt  mesh.cpp  mesh.h  mpi_mesh.h
tests/: CMakeLists.txt  main.cpp  mesh.cpp  mpi_helpers.h  mpi_mesh.cpp  omp_mpi.cpp  print.h  test_basic_parabolic.cpp  test_mesh.cpp  test_mpi_mesh.cpp  test_omp_mpi.cpp
tests/lib/: catch.hpp  mpi_helpers.h  print.h
utils/: CMakeLists.txt  print.h  progress.h  utils.cpp  utils.h
